# aushadhi

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py  polypharmacy_check.py
src/: __main__.py  core.py  health.py  utils.py
src/aushadhi/: __init__.py  cli.py  models.py  predictor.py  rag.py  report.py  risk_scorer.py
src/aushadhi/drugs/: __init__.py  classes.py  database.py  interactions.py
tests/: test_benchmark.py  test_core.py  test_integration.py  test_interactions.py  test_risk_scorer.py
